ocp-CRs/bamoe/bamoe.yaml
apiVersion: v1
kind: Service
metadata:
  name: bamoe
  namespace: bamoe-ns
  labels:
    app: bamoe
spec:
  selector:
    app: bamoe
  type: NodePort
  ports:
    - name: backend
      nodePort: 30203
      port: 8080
      targetPort: 8080
    - name: frontend
      nodePort: 30202
      port: 8880
      targetPort: 8880
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bamoe
  namespace: bamoe-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bamoe
  template:
    metadata:
      labels:
        app: bamoe
    spec:
      containers:
        - name: backend
          image: quay.io/marco_antonioni/bamoe9-compact-architecture-security:1.0.0
        - name: frontend
          image: quay.io/marco_antonioni/bamoe9-process-jwt-security:1.0.0
